# Shaker

./: .gitignore  CHANGES  README  README.textile  Readme  Setup.hs  ShakeIo.hs  ShakeIoTest.hs  Shaker.hs  TODO  edit.sh  loadGhci.sh  loadMain.sh  make.sh  shaker.cabal  shaker.org  shaker.otl  updateTags
Shaker/: Io.hs  IoTest.hs  Regex.hs  RegexTest.hs  Type.hs
prog/: Shaker.hs
shaker-test-provider/: LICENSE  Setup.hs  shaker-test-provider.cabal
shaker-test-provider/src/Shaker/: TestHelper.hs
src/: Main.hs  Shaker.hs
src/Shaker/: Cabal.hs  CabalInfo.hs  CabalInterface.hs  Cli.hs  CommonUtil.hs  CompileAction.hs  Conductor.hs  Config.hs  GhcInterface.hs  HelpAction.hs  HsHelper.hs  Interpreter.hs  Io.hs  Listener.hs  LoadAction.hs  Main.hs  ModuleData.hs  Parse.hs  Parser.hs  PluginConfig.hs  Reflexivite.hs  Regex.hs  SourceHelper.hs  TestHelper.hs  TestTH.hs  Type.hs
src/Shaker/Action/: Clean.hs  Compile.hs  Execute.hs  HUnit.hs  Load.hs  QuickCheck.hs  Quickcheck.hs  Reflexivite.hs  Standard.hs  Test.hs
src/Shaker/Cabal/: CabalInfo.hs  CabalInput.hs
testsuite/: runtests.sh
testsuite/tests/: RunTest.hs  RunTestTH.hs
testsuite/tests/Shaker/: CabalInfoTest.hs  CliTest.hs  CommonTest.hs  CommonUtilTest.hs  CompileActionTest.hs  ConductorTest.hs  GhcInterfaceTest.hs  HsHelperTest.hs  InterpreterTest.hs  IoTest.hs  Listener.hs  ListenerTest.hs  LoadActionTest.hs  ModuleDataTest.hs  ParseTest.hs  ParserTest.hs  Properties.hs  ReflexiviteTest.hs  RegexTest.hs  Run.hs  RunTest.hs  SourceHelperTest.hs
testsuite/tests/Shaker/Action/: CompileTest.hs  LoadTest.hs  QuickCheckTest.hs  ReflexiviteTest.hs
testsuite/tests/Shaker/Cabal/: CabalInfoTest.hs  CabalInputTest.hs
testsuite/tests/resources/: localSetup
testsuite/tests/resources/badImports/: BadImports.hs  DependanceToBadImports.hs
testsuite/tests/resources/cabalTest/: cabalTest.cabal
testsuite/tests/resources/cabalTest/src/: CabalTest.hs  Main.hs
testsuite/tests/resources/invalidMain/: Setup.hs  invalidMain.cabal
testsuite/tests/resources/invalidMain/tests/: Dummy.hs
testsuite/tests/resources/noSourceConfig/: noHsSource.cabal  noHsSource.hs
testsuite/tests/resources/sameFileInDifferentsModules/: sameFile.cabal
testsuite/tests/resources/sameFileInDifferentsModules/A/: A.hs
testsuite/tests/resources/sameModuleInDifferentDirectory/: sameModule.cabal
testsuite/tests/resources/sameModuleInDifferentDirectory/A/: A.hs
testsuite/tests/resources/tempEmacsFile/: tempEmacsFile.cabal
testsuite/tests/resources/tempEmacsFile/src/: .#TempFile.hs  Main.hs
