name: shaker
version: 0.1.0
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2010 Anthonin Bonnefoy
author: Anthonin Bonnefoy
maintainer: anthonin.bonnefoy@gmail.com
homepage: http://github.com/bonnefoa/Shaker
bug-reports: http://github.com/bonnefoa/Shaker/issues 
category: Development
synopsis: Shaker is an haskell build-tool inspired by SBT
description:
  Shaker is an interactive command-line build tool which allow you to 
  compile, test or run any action on your haskell project. You can define
  new actions to plug to the system.
  One interesting feature is the continuous action. 
  Shaker will execute the given action each time there is modification to your sources.

Executable shaker
  Main-Is: Main.hs
  ghc-options: -Wall
  hs-source-dirs: testsuite/tests src
  build-depends: base >= 4.1,
                 Cabal >= 1.8.0.2,
                 containers >= 0.3,
                 haskeline >= 0.6.0.0 
                 ,directory >= 1.0.1.0,
                 filepath >= 1.1,
                 ghc >= 6,
                 ghc-paths >= 0.1,
                 haskell98 >= 1.0,
                 mtl >= 1.0,
                 parsec >= 3.0,
                 regex-posix >= 0.94.1,
                 old-time >= 1.0.0
                 ,bytestring >= 0.9.1.5

Library
  exposed-modules:Shaker.Config
                  Shaker.Conductor
                  Shaker.Type
                  Shaker.Cabal.CabalInput
  ghc-options: -Wall
  hs-source-dirs: src testsuite/tests
  build-depends: base >= 4.1,
                 Cabal >= 1.8.0.2,
                 containers >= 0.3,
                 haskeline >= 0.6.0.0 ,
                 directory >= 1.0.1.0,
                 filepath >= 1.1,
                 ghc >= 6,
                 ghc-paths >= 0.1,
                 haskell98 >= 1.0,
                 mtl >= 1.0,
                 parsec >= 3.0,
                 regex-posix >= 0.94.1
                 ,bytestring >= 0.9.1.5
                 ,old-time >= 1.0.0

