name: shaker
version: 0.1.0
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2010 Anthonin Bonnefoy
author: Anthonin Bonnefoy
maintainer: anthonin.bonnefoy@gmail.com
homepage: http://github.com/bonnefoa/Shaker
bug-reports: http://github.com/bonnefoa/Shaker/issues 
Stability:alpha
Tested-With:GHC == 6.12.1
category: Development
synopsis: simple and interactive command-line build tool
description: 
  Shaker is a build tool which allow to compile an haskell project with some features like continuous action similar to SBT.
  .
  For now, all configuration are made via cabal. Shaker will read cabal configuration to discover source directories, compilation options and targets to compile.
  .
  /Usage/
  .
  The cabal configuration file should be generated beforehand with /runhaskell Setup.hs configure/. If you change your cabal configuration, you need to recreate the configuration file. 
  .
  /Execution/
  .
  In the root of your haskell project, launch shaker. An interactive prompt will allow you to execute differents action.
  .
  /Action execution/
  .
  [@Simple Execution@] An action can be launched normally, by entering the action name 
  .
  [@Multiple action execution@] You can specify multiple action to execute simply by separating action by spaces.
  .
  [@Continuous Action@] A continuous action will execute the action when a changement on files has been detected.
  Every action are elligible to continuous action, you simply need to prefix them with '~'
  .
  /Available actions/
  .
  [@Compile@] Compile the project. Targets of the compilation are main file (in case of executable) or exposed modules (in case of library).
  .
  [@FullCompile@] Compile all hs files found in source directory. It is usefull to compile test sources.
  .
  [@Clean@] Clean the directory containing .o and .hi files.
  .
  [@Quit@] Exit the application.
  . 
  /Examples/
  .
  [@% Compile@] Simply compile the project
  .
  [@% Clean Compile@] Clean and compile the project
  .
  [@% ~Compile@] Switch to continuous mode and will compile the project when sources are modified.
  .
  [@% ~Clean Compile@] Switch to continuous mode and will clean and compile the project when sources are modified.

Executable shaker
  Main-Is: Main.hs
  ghc-options: -Wall
  hs-source-dirs: src testsuite/tests 
  build-depends: base >= 4.1,
                 Cabal >= 1.8.0.2,
                 containers >= 0.3,
                 haskeline >= 0.6.0.0 
                 ,directory >= 1.0.1.0,
                 filepath >= 1.1,
                 ghc >= 6,
                 ghc-paths >= 0.1,
                 haskell98 >= 1.0,
                 mtl >= 1.0,
                 parsec >= 3.0,
                 regex-posix >= 0.94.1,
                 old-time >= 1.0.0
                 ,bytestring >= 0.9.1.5

