Name:     cabalTest
Version:  0.0.1
cabal-version: >= 1.8
build-type: Simple

Executable cabalTest
  Main-Is: Main.hs
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends: ghc >= 6
                 ,base >=4

Library 
  exposed-modules: CabalTest
  other-modules: Paths_cabalTest
  ghc-options: -Wall
  hs-source-dirs: src 
  build-depends: ghc >= 6
                 ,base >=4


